fix(ui/tokens): spacing

--- a/ui/demo-pwa/style/tokens/spacing.css
+++ b/ui/demo-pwa/style/tokens/spacing.css
@@ -11,16 +11,13 @@
   --alwatr-sys-spacing-track-8: calc(8 * var(--alwatr-sys-spacing-track));
   --alwatr-sys-spacing-track-9: calc(9 * var(--alwatr-sys-spacing-track));
 
-  --alwatr-sys-spacing-halftrack: 4px;
+  --alwatr-sys-spacing-halftrack: calc(var(--alwatr-sys-spacing-track) / 2);
   --alwatr-sys-spacing-halftrack-1: var(--alwatr-sys-spacing-halftrack);
   --alwatr-sys-spacing-halftrack-2: calc(2 * var(--alwatr-sys-spacing-halftrack));
   --alwatr-sys-spacing-halftrack-3: calc(3 * var(--alwatr-sys-spacing-halftrack));
   --alwatr-sys-spacing-halftrack-4: calc(4 * var(--alwatr-sys-spacing-halftrack));
   --alwatr-sys-spacing-halftrack-5: calc(5 * var(--alwatr-sys-spacing-halftrack));
   --alwatr-sys-spacing-halftrack-6: calc(6 * var(--alwatr-sys-spacing-halftrack));
-  --alwatr-sys-spacing-halftrack-7: calc(7 * var(--alwatr-sys-spacing-halftrack));
-  --alwatr-sys-spacing-halftrack-8: calc(8 * var(--alwatr-sys-spacing-halftrack));
-  --alwatr-sys-spacing-halftrack-9: calc(9 * var(--alwatr-sys-spacing-halftrack));
 
   --alwatr-sys-breakpoint-handset: 600px;
   --alwatr-sys-breakpoint-tablet: 840px;
